motor_data.hpp 수정

--- a/bringup/config/rrbot_controllers.yaml
+++ b/bringup/config/rrbot_controllers.yaml
@@ -10,6 +10,6 @@ forward_position_controller:
   ros__parameters:
     type: forward_command_controller/ForwardCommandController
     joints:
-      - joint1
-      - joint2
+      - ak70-10-v1_1_continuous
+      - ak70-10-v1_2_continuous-9
     interface_name: position
