--- a/bringup/config/rrbot_controllers.yaml
+++ b/bringup/config/rrbot_controllers.yaml
@@ -25,7 +25,7 @@ joint_trajectory_controller:
     action_monitor_rate: 20.0
     
     allow_partial_joints_goal: false
-    open_loop_control: true
+    open_loop_control: false
     constraints:
       stopped_velocity_tolerance: 0.01
       goal_time: 0.0
