--- a/bringup/config/rrbot_controllers.yaml
+++ b/bringup/config/rrbot_controllers.yaml
@@ -1,29 +1,25 @@
 controller_manager:
   ros__parameters:
     update_rate: 10  # Hz
+
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
+
     joint_trajectory_controller:
-      type: "joint_trajectory_controller/JointTrajectoryController"
+      type: joint_trajectory_controller/JointTrajectoryController
+
     forward_position_controller:
       type: forward_command_controller/ForwardCommandController
 
-
-
-# 컨트롤러 파라미터 설정
 joint_trajectory_controller:
   ros__parameters:
     joints:
       - ak70-10-v1_1_continuous
-    
     command_interfaces:
       - position
-    
     state_interfaces:
       - position
-    
     action_monitor_rate: 20.0
-    
     allow_partial_joints_goal: false
     open_loop_control: false
     constraints:
@@ -32,7 +28,6 @@ joint_trajectory_controller:
       ak70-10-v1_1_continuous:
         trajectory: 0.05
         goal: 0.03
-
 
 forward_position_controller:
   ros__parameters:
