--- a/bringup/config/rrbot_controllers.yaml
+++ b/bringup/config/rrbot_controllers.yaml
@@ -1,7 +1,7 @@
 #sfbot_can/bringup/config/rrbot_controllers.yaml
 controller_manager:
   ros__parameters:
-    update_rate: 50  # Hz
+    update_rate: 100  # Hz
 
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
@@ -20,12 +20,12 @@ joint_trajectory_controller:
       - position
     state_interfaces:
       - position
-    action_monitor_rate: 20.0
+    action_monitor_rate: 50.0
     allow_partial_joints_goal: false
-    open_loop_control: false
+    open_loop_control: true
     constraints:
-      stopped_velocity_tolerance: 1.0
-      goal_time: 2.0
+      stopped_velocity_tolerance: 0.01
+      goal_time: 0.5
       ak70-10-v1_1_continuous:
         trajectory: 3.5
         goal: 3.5
