--- a/bringup/config/test_controllers.yaml
+++ b/bringup/config/test_controllers.yaml
@@ -15,8 +15,12 @@ controller_manager:
 joint_trajectory_controller:
   ros__parameters:
     joints:
-      - ak70-10-v1_1_continuous
-      - ak70-10-v1_2_continuous-9
+      - joint_1
+      - joint_2
+      - joint_3
+      - joint_4
+      - joint_5
+      - joint_6
     command_interfaces:
       - position
     state_interfaces:
@@ -27,22 +31,42 @@ joint_trajectory_controller:
     constraints:
       stopped_velocity_tolerance: 0.01
       goal_time: 1.0
-      ak70-10-v1_1_continuous:
+      joint_1:
         trajectory: 3.5
         goal: 3.5
-      ak70-10-v1_2_continuous-9:
+      joint_2:
+        trajectory: 3.5
+        goal: 3.5
+      joint_3:
+        trajectory: 3.5
+        goal: 3.5
+      joint_4:
+        trajectory: 3.5
+        goal: 3.5
+      joint_5:
+        trajectory: 3.5
+        goal: 3.5
+      joint_6:
         trajectory: 3.5
         goal: 3.5
 
 forward_position_controller:
   ros__parameters:
     joints:
-      - ak70-10-v1_1_continuous
-      - ak70-10-v1_2_continuous-9
+      - joint_1
+      - joint_2
+      - joint_3
+      - joint_4
+      - joint_5
+      - joint_6
     interface_name: position
 
 joint_state_broadcaster:
   ros__parameters:
     joints:
-      - ak70-10-v1_1_continuous
-      - ak70-10-v1_2_continuous-9
+      - joint_1
+      - joint_2
+      - joint_3
+      - joint_4
+      - joint_5
+      - joint_6
