--- a/bringup/config/test_controllers.yaml
+++ b/bringup/config/test_controllers.yaml
@@ -27,7 +27,7 @@ joint_trajectory_controller:
       - position
     action_monitor_rate: 50.0
     allow_partial_joints_goal: false
-    open_loop_control: true
+    open_loop_control: false
     constraints:
       stopped_velocity_tolerance: 0.01
       goal_time: 1.0
