--- a/bringup/config/test_controllers.yaml
+++ b/bringup/config/test_controllers.yaml
@@ -1,4 +1,4 @@
-#sfbot_can/bringup/config/rrbot_controllers.yaml
+#sfbot_can/bringup/config/test_controllers.yaml
 controller_manager:
   ros__parameters:
     update_rate: 100  # Hz
@@ -28,27 +28,6 @@ joint_trajectory_controller:
     action_monitor_rate: 50.0
     allow_partial_joints_goal: false
     open_loop_control: false
-    constraints:
-      stopped_velocity_tolerance: 0.01
-      goal_time: 1.0
-      joint_1:
-        trajectory: 3.5
-        goal: 3.5
-      joint_2:
-        trajectory: 3.5
-        goal: 3.5
-      joint_3:
-        trajectory: 3.5
-        goal: 3.5
-      joint_4:
-        trajectory: 3.5
-        goal: 3.5
-      joint_5:
-        trajectory: 3.5
-        goal: 3.5
-      joint_6:
-        trajectory: 3.5
-        goal: 3.5
 
 forward_position_controller:
   ros__parameters:
@@ -60,6 +39,8 @@ forward_position_controller:
       - joint_5
       - joint_6
     interface_name: position
+    command_interfaces:
+      - position
 
 joint_state_broadcaster:
   ros__parameters:
