--- a/bringup/config/test_controllers.yaml
+++ b/bringup/config/test_controllers.yaml
@@ -21,10 +21,20 @@ joint_trajectory_controller:
       - joint_4
       - joint_5
       - joint_6
+    gains:
+      joint_1: {p: 5000.0, i: 0.1, d: 100.0}  # ✅ P값 증가로 즉각적인 반응
+      joint_2: {p: 5000.0, i: 0.1, d: 100.0}
+      joint_3: {p: 5000.0, i: 0.1, d: 100.0}
+      joint_4: {p: 5000.0, i: 0.1, d: 100.0}
+      joint_5: {p: 5000.0, i: 0.1, d: 100.0}
+      joint_6: {p: 5000.0, i: 0.1, d: 100.0}
+    constraints:
+      goal_time: 0.1
     command_interfaces:
       - position
     state_interfaces:
       - position
+    state_publish_rate: 200
     action_monitor_rate: 50.0
     allow_partial_joints_goal: false
     open_loop_control: false
