다중 CAN 통신 인터페이스 추가 및 rviz 런치 추가

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,11 @@ install(TARGETS sfbot_can
   RUNTIME DESTINATION bin
 )
 
+install(
+  DIRECTORY rviz
+  DESTINATION share/sfbot_can
+)
+
 if(BUILD_TESTING)
   find_package(ament_cmake_pytest REQUIRED)
 
